[project]
name = "test-dbx-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.26.4",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dbx = [
    "databricks-connect<16.4.16",
]
local = [
    "pyspark>=4.1.1",
]

[[tool.uv.index]]
url = "https://artifactory.8451.cloud/artifactory/api/pypi/python-all/simple"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
